2008-09-13  Joel Brobecker  <brobecker@adacore.com>

	* ada-lang.c (remove_extra_symbols): Remove stub symbols if
	the associated complete symbol is also in the list.
	(ada_add_local_symbols, ada_add_non_local_symbols): New functions,
	extracted out from ada_lookup_symbol_list.
	(ada_lookup_symbol_list): Use them.  Remove the search through
	the minimal symbols.

2008-09-13  Joel Brobecker  <brobecker@adacore.com>

        * dwarf2read.c (add_partial_subprogram): New procedure.
        (scan_partial_symbols): Use it.
        (load_partial_dies): Read in children of subprogram and lexical
        blocks for Ada compilation units.

2008-09-13  Tom Tromey  <tromey@redhat.com>

	* symfile.c (build_id_verify): Free 'found'.
	(find_separate_debug_file): Use xfree, not free.

2008-09-12  Doug Evans  <dje@google.com>

	* corefile.c (write_memory): Remove unnecessary copying.

	* sol-thread.c (_initialize_sol_thread): Add FIXME regarding
	order of _initialize_* fns.

	* dwarf2read.c (comp_unit_head): Rename first_die_ptr to
	first_die_offset.  All uses updated.
	Delete unused members cu_head_ptr, next.
	Move members base_known, base_address to ...
	(dwarf2_cu) ... here.  All uses updated.

2008-09-12  Pedro Alves  <pedro@codesourcery.com>

	* Makefile.in (generated_files): Add $(NAT_GENERATED_FILES).
	* config/i386/i386gnu.mh (NAT_GENERATED_FILES): New.

2008-09-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* fork-child.c (startup_inferior): Use target_wait and target_resume
	directly instead of calling wait_for_inferior / resume.

	* infcmd.c (kill_if_already_running): Do not call no_shared_libraries
	or init_wait_for_inferior.
	(run_command_1): Call init_wait_for_inferior.

2008-09-11  Ulrich Weigand  <uweigand@de.ibm.com>

	* gdbtypes.h (builtin_type_void_data_ptr, builtin_type_void_func_ptr,
	builtin_type_CORE_ADDR, builtin_type_char, builtin_type_short,
	builtin_type_int, builtin_type_long, builtin_type_signed_char,