@@ -1,3 +1,13 @@
+2008-09-13  Tom Tromey  <tromey@redhat.com>
+
+	* varobj.c (varobj_set_display_format): Use xfree.
+	* tracepoint.c (stringify_collection_list): Use xfree.
+	* remote-fileio.c (remote_fileio_reset): Use xfree.
+	* mipsread.c (read_alphacoff_dynamic_symtab): Use xfree.
+	* dfp.c (decimal_from_floating): Use xfree, xstrprintf.  Don't use
+	asprintf.
+	* cp-support.c (mangled_name_to_comp): Use xfree.
+
 2008-09-13  Joel Brobecker  <brobecker@adacore.com>
 
 	* ada-lang.c (remove_extra_symbols): Remove stub symbols if
